# openSkills

./: IDENTITY.md  README.md  USER.md
.openclaw/: workspace-state.json
agents/daily-skill-writer/: AGENT.md  CONFIG.json  README.md  SOUL.md
daily-skill-dev/: daily-market-research.sh  report-2026-03-18.md
dotenv-nexus/: .gitignore  Cargo.toml  LICENSE  README.md  package.json
dotenv-nexus/src/: config.rs  crypto.rs  env_files.rs  main.rs
memory/: 2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md
prompt-vault/: LICENSE  README.md  go.mod  main.go
skills/recruiter-boss/: SKILL.md  skill.json
