[package]
name = "dotenv-nexus"
version = "0.1.0"
edition = "2021"
description = "The modern .env file manager - encrypt, store, and switch between environment variables securely"
license = "MIT"
repository = "https://github.com/BIBiBI12/openSkills"
keywords = ["dotenv", "env", "cli", "encryption", "security"]
categories = ["command-line-utilities", "development-tools", "config"]

[[bin]]
name = "dnx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
dialoguer = "0.11"
sha2 = "0.10"
generic-array = "0.14"
